--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
   <title>FreeFlow — zamów głosem</title>
   <meta name="color-scheme" content="dark light" />
 
-  <!-- KONFIG (czytane przez freeflow-assistant.js) -->
-  <meta name="gpt-proxy" content="/api/gpt">          <!-- jeśli masz endpoint z poprzedniej wiadomości -->
-  <meta name="asr-provider" content="browser">        <!-- 'browser' lub 'whisper' -->
-  <meta name="whisper-url" content="">                <!-- np. https://twoj-backend/api/whisper -->
-  <meta name="whisper-auth" content="">               <!-- np. Bearer XXX -->
-
   <style>
     :root{
       --glass-bg: rgba(20,20,22,.55);
@@ -36,6 +30,8 @@
       background:radial-gradient(1200px 600px at 50% -200px, rgba(255,149,64,.12), transparent 60%);
       backdrop-filter:blur(.5px);
     }
+
+    /* header */
     .topbar{display:flex; align-items:center; justify-content:space-between; gap:12px}
     .brand{display:flex; align-items:baseline; gap:10px; letter-spacing:.2px}
     .brand b{color:var(--brand); font-weight:900; font-size:clamp(24px,4.5vw,36px)}
@@ -48,58 +44,52 @@
     .cart-badge{position:absolute; transform:translate(14px,-14px); background:#ff9e3d; color:#101217; font-weight:800;
       min-width:26px; height:26px; padding:0 6px; border-radius:999px; display:grid; place-items:center; font-size:13px; border:2px solid #11151b}
 
+    /* stage */
     .stage{display:grid; place-items:center; margin:clamp(14px,3vw,24px) 0 0}
     .logoWrap{
       position:relative; width:min(82vw,420px);
-      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color:transparent;
+      user-select:none; -webkit-user-drag:none; -webkit-tap-highlight-color: transparent;
       filter:drop-shadow(0 12px 60px rgba(0,0,0,.55));
     }
-    .logoWrap img{width:100%; height:auto; display:block; pointer-events:none}
-    .hit{
-      position:absolute; inset:0; border-radius:36px; background:transparent; border:0;
-      cursor:pointer; outline:none; -webkit-tap-highlight-color: transparent;
+    .logoBtn{
+      display:block; border:0; padding:0; background:transparent; cursor:pointer;
+      width:100%; border-radius:36px; -webkit-tap-highlight-color: transparent; outline: none;
     }
-    .hit:focus{outline:none}
+    .logoBtn:focus-visible{ outline:2px solid rgba(33,212,253,.6) }
+    .logo{width:100%; height:auto; display:block; pointer-events:none}
     .listening .logoWrap{animation:pulse 1.1s ease-in-out infinite}
     @keyframes pulse{
       0%,100%{filter:drop-shadow(0 10px 48px rgba(255,136,64,.36)); transform:scale(1)}
-      50%{    filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}
+      50%{filter:drop-shadow(0 12px 88px rgba(33,212,253,.55)); transform:scale(1.015)}
     }
 
+    /* transcript */
     .asr{
-      margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px);
-      border-radius:20px; padding:18px 20px;
+      margin:clamp(8px,2vw,14px) auto 0; width:min(92vw,720px); border-radius:20px; padding:18px 20px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur));
       display:flex; align-items:center; gap:10px; box-shadow:0 12px 50px rgba(0,0,0,.35)
     }
     .dot{width:10px; height:10px; border-radius:999px; background:#86e2ff; box-shadow:0 0 16px #86e2ff}
     .text{flex:1; min-height:1.2em}
     .ghost{color:var(--muted)}
-    .micBtn{width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
+    .micBtn{
+      width:46px; height:46px; border-radius:14px; border:1px solid var(--glass-brd);
       background:linear-gradient(180deg, rgba(255,143,67,.18), rgba(33,212,253,.14));
-      display:grid; place-items:center; cursor:pointer}
+      display:grid; place-items:center; cursor:pointer; -webkit-tap-highlight-color: transparent;
+    }
 
+    /* tiles */
     .dock{margin-top:clamp(16px,3.8vh,30px); display:flex; gap:14px; justify-content:center; flex-wrap:wrap}
     .tile{display:flex; align-items:center; gap:12px; min-width:150px; padding:14px 18px; border-radius:22px;
       background:var(--glass-bg); border:1px solid var(--glass-brd); backdrop-filter:blur(var(--glass-blur)); color:#fff; font-weight:700}
     .tile .i{font-size:22px}
     .tile.active{outline:2px solid rgba(33,212,253,.6)}
 
-    /* lekki debug-toast (nie nachodzi na transkrypcję) */
-    .toast{
-      position: fixed; left:50%; translate:-50% 0;
-      bottom: calc(96px + env(safe-area-inset-bottom));
-      width:min(92vw,740px);
-      border-radius:16px; padding:12px 14px;
-      background:var(--glass-bg); border:1px solid var(--glass-brd);
-      backdrop-filter: blur(var(--glass-blur));
-      box-shadow:0 12px 60px rgba(0,0,0,.35);
-      display:none; font-size:14px; color:#e9ecf6
-    }
-    .toast.show{display:block}
-
+    /* debug */
+    .debug{position:fixed; right:10px; bottom:10px; max-width:70vw; font-size:12px; color:#ddd;
+      background:rgba(0,0,0,.55); border:1px solid rgba(255,255,255,.08); border-radius:10px; padding:8px 10px; display:none}
+    .debug.show{display:block}
     .hidden{display:none !important}
-    a,button{color:inherit}
   </style>
 </head>
 <body>
@@ -120,9 +110,9 @@
 
     <section class="stage">
       <div class="logoWrap" id="logoWrap">
-        <!-- najpierw SVG, jeśli nie ma – w locie podmiana na PNG -->
-        <img id="ffLogo" src="assets/Freeflow-logo.svg" alt="FreeFlow" width="840" height="1080" />
-        <button class="hit" id="logoBtn" aria-label="Naciśnij, aby mówić"></button>
+        <button class="logoBtn" id="logoBtn" aria-label="Naciśnij, aby mówić">
+          <img class="logo" src="assets/Freeflowlogo.png" alt="FreeFlow" width="840" height="1080" />
+        </button>
       </div>
 
       <div class="asr" id="asrBox" role="status" aria-live="polite">
@@ -137,22 +127,11 @@
       <button class="tile" id="tileTaxi"><span class="i">🚕</span> <span>Taxi</span></button>
       <button class="tile" id="tileHotel"><span class="i">🏡</span> <span>Hotel</span></button>
     </nav>
-
-    <div class="toast" id="toast"></div>
   </div>
 
+  <!-- mini debug -->
+  <div class="debug" id="debug"></div>
+
   <script src="freeflow-assistant.js" defer></script>
-  <script>
-    // fallback logotypu: jeśli SVG nie istnieje → PNG
-    (function(){
-      const img = document.getElementById('ffLogo');
-      img.addEventListener('error', ()=>{
-        if(!img.dataset.fallback){
-          img.dataset.fallback = '1';
-          img.src = 'assets/Freeflowlogo.png';
-        }
-      }, {once:true});
-    })();
-  </script>
 </body>
 </html>
